--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -1354,7 +1354,7 @@ set7RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7_ALL.csv", row.names 
 #ash1RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7_ALL.csv", row.names = 1)
 
 #RNA coloring function for colorbrwer RdBu heatmap
-rng <- c(-3, 3)
+rng <- c(-2, 2)
 pal  <- colorRampPalette(rev(brewer.pal(7, "RdBu")))(100)  # includes white in the middle
 vals <- seq(rng[1], rng[2], length.out = length(pal))
 rna_col_fun <- colorRamp2(vals, pal)
@@ -1859,22 +1859,21 @@ out <- make_chip_rna_heatmap_simple(
     K36 = H3K36me3_Results_K27promTSS_vInput
   ),
   chip_cols_list = list(
-    K27 = c("logFC_cac1","logFC_cac2","logFC_set7"),
+    K27 = c("logFC_cac1","logFC_cac2","logFC_ash1"),
     K36 = c("logFC_cac1","logFC_cac2","logFC_set7")
   ),
   rna_list  = list(cac1 = cac1RNA, cac2 = cac2RNA, set7 = set7RNA),
   gene_col  = "gene_id",
   manual_clusters = list(
     K36_lost       = K36lost,
-    K27_lost_only  = K27lost_only,
-    K27_K36retain  = K27_K36retain
+    K27_lost_only  = K27lost_only
   ),
   manual_labels = c("K36 lost","K27 lost only","K27+K36 retain"),
   manual_sort = list(
     "K36 lost"       = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE),
-    "K27 lost only"  = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE),
-    "K27+K36 retain" = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE)
+    "K27 lost only"  = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE)
   ),
+  manual_keep_unassigned = FALSE,   # <- drop anything not in those clusters
   chip_colors_list = list(
     K27 = c("white","#00441B"),
     K36 = c("white","#a65628")
@@ -1883,9 +1882,9 @@ out <- make_chip_rna_heatmap_simple(
     K27 = c(0, 5),
     K36 = c(0, 2)
   ),
-  chip_zero_band = 1,
+  chip_zero_band = 0,
   rna_limits = c(-6,6),
-  rna_zero_band = 1.5,
+  rna_zero_band = 2,
   rna_colors = c("blue","white","red"),
   row_gaps_mm = 0,
   out_dir = "csaw_heatmaps",
@@ -1898,32 +1897,43 @@ out <- make_chip_rna_heatmap_simple(
 
 #Using z-score table for RNA-seq
 # z-score table like your GenesWithChanges (rows = gene IDs, cols = strains)
-rna_cols <- c("cac-1","cac-2","set-7")  # (match column names in your z-score df)
+rna_cols <- c("cac-1","set-7","ash-1")  # (match column names in your z-score df)
+
+# genes present in RNA z-score matrix
+genes_keep <- rownames(rna_z)
+
+# Filter each ChIP df to RNA genes
+K27_f <- subset(H3K27me3_CS_Results_K27promTSS_vInput, gene_id %in% genes_keep)
+K36_f <- subset(H3K36me3_Results_K27promTSS_vInput,   gene_id %in% genes_keep)
+
+# (Recommended) Filter your manual cluster dfs to those same genes
+K36lost_f      <- subset(K36lost, K36lost$gene_id %in% genes_keep)
+K27lost_only_f <- subset(K27lost_only, K27lost_only$gene_id %in% genes_keep)
+
 
 out <- make_chip_rna_heatmap_simple(
   chip_list = list(
-    K27 = H3K27me3_CS_Results_K27promTSS_vInput,
-    K36 = H3K36me3_Results_K27promTSS_vInput
+    K27 = K27_f,
+    K36 = K36_f
   ),
   chip_cols_list = list(
-    K27 = c("logFC_WT","logFC_cac1","logFC_cac2","logFC_ash1"),
-    K36 = c("logFC_WT","logFC_cac1","logFC_cac2","logFC_set7")
+    K27 = c("logFC_WT","logFC_cac1","logFC_ash1"),
+    K36 = c("logFC_WT","logFC_cac1","logFC_set7")
   ),
   rna_matrix = rna_z,
-  rna_select = rna_cols,          # choose which columns to show
-  rna_missing_fill = 0,           # missing genes -> 0
+  rna_select = rna_cols,
   gene_col  = "gene_id",
   manual_clusters = list(
-    K36_lost       = K36lost,       # new name = df name (if not renamed with labels)
-    K27_lost_only  = K27lost_only,
-    K27_K36retain  = K27_K36retain
+    K36_lost      = K36lost_f,
+    K27_lost_only = K27lost_only_f
   ),
-  manual_labels = c("K36 lost","K27 lost only","K27&K36 retain"),
+  manual_labels = c("K36 lost","K27 lost only"),
+  manual_keep_unassigned = FALSE,   # <- drop anything not in those clusters
   manual_sort = list(
-    "K36 lost"       = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE),
-    "K27 lost only"  = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE),
-    "K27&K36 retain" = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE)
+    "K36 lost"       = list(on="chip", chip="K27", strains=c("cac1"), decreasing=TRUE),
+    "K27 lost only"  = list(on="chip", chip="K27", strains=c("cac1"), decreasing=TRUE)
   ),
+
   chip_colors_list = list(
     K27 = c("white","#00441B"),
     K36 = c("white","#a65628")
@@ -1932,13 +1942,14 @@ out <- make_chip_rna_heatmap_simple(
     K27 = c(0, 5),
     K36 = c(0, 2)
   ),
-  chip_zero_band = 1,
-  rna_colors = rna_col_fun,
+  chip_zero_band = 0,
+  rna_colors = rna_col_fun,  # your RdBu colorRamp2 mapper with white at 0
   row_gaps_mm = 0,
   out_dir = "csaw_heatmaps",
   file_prefix = "K27_K36_zRNA",
   save_formats = c("pdf","png"),
-  width_in = 12,
+  width_in = 9,
+  height_in = 4,
   dpi = 300,
   write_plotted_rows = TRUE
 )
