--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -1348,10 +1348,10 @@ make_csaw_heatmap_clusterby(
 #script to make a heatmap w ChIP log2FC data & RNA-seq log2FC data (will use csaw results, which is why i have it here)
 
 #read in log2FC Expression data saved from DESeq for whatever strains you want
-cac1RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac1_new_ALL.csv", row.names = 1)
-cac2RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac2_ALL.csv", row.names = 1)
-set7RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7_ALL.csv", row.names = 1)
-#ash1RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7_ALL.csv", row.names = 1)
+cac1RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac1__alpha0.05__ALL_results_LFC.csv", row.names = 1)
+cac2RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac2__alpha0.05__ALL_results_LFC.csv", row.names = 1)
+set7RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7__alpha0.05__ALL_results_LFC.csv", row.names = 1)
+ash1RNA= read.csv("../CAF-1_RNA-seq_Analysis/csv_files/ash1__alpha0.05__ALL_results_LFC.csv", row.names = 1)
 
 #RNA coloring function for colorbrwer RdBu heatmap
 rng <- c(-2, 2)
@@ -1862,7 +1862,7 @@ out <- make_chip_rna_heatmap_simple(
     K27 = c("logFC_cac1","logFC_cac2","logFC_ash1"),
     K36 = c("logFC_cac1","logFC_cac2","logFC_set7")
   ),
-  rna_list  = list(cac1 = cac1RNA, cac2 = cac2RNA, set7 = set7RNA),
+  rna_list  = list(cac1 = cac1RNA, cac2 = cac2RNA, set7 = set7RNA, ash1 = ash1RNA),
   gene_col  = "gene_id",
   manual_clusters = list(
     K36_lost       = K36lost,
@@ -1873,7 +1873,7 @@ out <- make_chip_rna_heatmap_simple(
     "K36 lost"       = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE),
     "K27 lost only"  = list(on="chip", chip="K27", strains=c("cac1","cac2"), decreasing=TRUE)
   ),
-  manual_keep_unassigned = FALSE,   # <- drop anything not in those clusters
+  manual_keep_unassigned = FALSE,  
   chip_colors_list = list(
     K27 = c("white","#00441B"),
     K36 = c("white","#a65628")
@@ -1883,12 +1883,12 @@ out <- make_chip_rna_heatmap_simple(
     K36 = c(0, 2)
   ),
   chip_zero_band = 0,
-  rna_limits = c(-6,6),
-  rna_zero_band = 2,
+  rna_limits = c(-8,8),
+  rna_zero_band = 1.5,
   rna_colors = c("blue","white","red"),
   row_gaps_mm = 0,
   out_dir = "csaw_heatmaps",
-  file_prefix = "K27_K36_RNA_multicolor",
+  file_prefix = "K27_K36_RNA_TEST",
   save_formats = c("pdf","png"),
   width_in = 12,
   dpi = 300,
@@ -2031,7 +2031,7 @@ chip_scatter_flex <- function(
   mode = c("chip_vs_rna","chip_vs_chip"),
 
   # --- inputs shared / aligned by gene id ---
-  gene_col       = "V10",          # gene id column inside ChIP dfs
+  gene_col       = "gene_id",          # gene id column inside ChIP dfs
 
   # X axis (ChIP set A)
   chip_df_x,                        # ChIP df for X (e.g., H3K27me3 promoters)
@@ -2249,18 +2249,21 @@ chip_scatter_flex <- function(
 ```
 
 ```{r, use scatter plot function}
+#genes actually enirched for H3K36me3
+K36enrich = subset(H3K36me3_Results_K27proms_vInput, H3K36me3_Results_K27proms_vInput$logFC_WT > 0)
+K36scatter = subset(H3K36me3_Results_K27proms_vWT, H3K36me3_Results_K27proms_vWT$gene_id %in% K36enrich$gene_id)
 
 #Example Use (ChIP vs RNA)
 out <- chip_scatter_flex(
   mode        = "chip_vs_rna",
-  chip_df_x   = Kac_Results_K27promTSS_vWT,  # X = H3K36me3
+  chip_df_x   = K36scatter,  # 
   strain_x    = "cac1",
   rna_df      = cac1RNA,                          # RNA for cac1
-  up_thresh      =  1.5,
-  down_thresh    = -1.5,
-  chip_x_label = "Kac",                      # label in axes/title
+  up_thresh      =  1,
+  down_thresh    = -1,
+  chip_x_label = "K36",                      # label in axes/title
   out_dir     = "scatter_outputs",
-  file_prefix = "Kac_K27promTSS_vs_RNA_cac1",
+  file_prefix = "K36_K27promTSS_vs_RNA_cac1",
   width_in    = 12, height_in = 9, dpi = 600
 )
 out$gg
@@ -2543,21 +2546,21 @@ peaks_win <- heatmap_to_bed_peaks(
 
 # Example 2: vInput heatmap, enriched regions per strain across a pre-determined region set (i.e. all genes)
 peaks <- heatmap_to_bed_peaks(
-  hm_df         = H3K36me3_Heatmap_K27promTSS_vWT,
+  hm_df         = H3K36me3_Heatmap_allgenes_vWT,
   out_dir       = "csaw_beds/H3K36me3_vWT",
-  prefix        = "H3K36me3_lost_K27genes",
+  prefix        = "H3K36me3_lost_allgenes",
   mode          = "region",
   direction     = "negative",
   min_value     = 0.75,                         
   merge_windows = FALSE,                     # ignored in region mode anyway
   zero_based    = TRUE,
   file_norm_tag = NULL,                      # OR "vInput"/"vWT" if you want it appended here
-  source_regions_df = regions$K27promTSS, # needs to match your original region df with coords + gene IDs
+  source_regions_df = regions$allgenes, # needs to match your original region df with coords + gene IDs
   source_key_cols   = c("V1","V2","V3"),
-  source_gene_col   = "V10",      # may want to use V11, which has NCUs instead of names (change below)
+  source_gene_col   = "gene_id",      # may want to use V11, which has NCUs instead of names (change below)
   promote_to_full_genes  = TRUE,
-  universe_df            = regions$K27genes, #IMPORTANT: The df you want to subset
-  universe_gene_col      = "V10",
+  universe_df            = regions$allgenes, #IMPORTANT: The df you want to subset
+  universe_gene_col      = "gene_id",
   universe_label         = "genes",
   universe_is_zero_based = FALSE,          
   create_dataframes      = TRUE
@@ -2648,5 +2651,17 @@ K27_K36retain = subset(regions$K27genes, ! regions$K27genes$gene_id %in% K36lost
 
 write.table(K27lost_only, file = "CAF1_K27_lost_only.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K27_K36retain, file = "CAF1_K36_K27_retain.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+
+######
+K36lost_CAF_ALL = subset(H3K36me3_Results_allgenes_vWT, H3K36me3_Results_allgenes_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_allgenes_vWT$logFC_cac2 < -0.75)
+
+CAF_K27_K36_Lost <- bind_rows(
+  mutate(K27lost, .source = "K27lost"),
+  mutate(K36lost, .source = "K36lost")
+) %>%
+  # if you want cac1UP to win on collisions, keep this order
+  distinct(gene_id, .keep_all = TRUE) %>%
+  select(-.source)
+
 
 ```
