--- a/CAF-1_Paper_Figure1_combined_script_ET.Rmd
+++ b/CAF-1_Paper_Figure1_combined_script_ET.Rmd
@@ -109,21 +109,32 @@ rownames(Prc2targetTPM)[rownames(Prc2targetTPM) == "lac"] <- "laccase precursor"
 
 #Subset Data (n = 575)
 AVERAGE_Prc2targetTPM <- subset(Data_Chaperones, rownames(Data_Chaperones)%in%rownames(Prc2targetTPM))
+AVERAGE_Prc2targetTPM_Double <- subset(Data_Doubles, rownames(Data_Doubles)%in%rownames(Prc2targetTPM))
 
 #Subset data to filter out non-repressed PRC2 targets regions that got through (cutting out any genes over 10 tpm in WT). Choice of 10 TPM cutoff was arbitrary
 ##These are likely genes whose promoters are not marked by H3K27me3, genes on the edge of K27 regions, and/or bivalent genes
 AVERAGE_Prc2targetTPM <- subset(AVERAGE_Prc2targetTPM, (AVERAGE_Prc2targetTPM[,1] < 10))
+AVERAGE_Prc2targetTPM_Double <- subset(AVERAGE_Prc2targetTPM_Double, (AVERAGE_Prc2targetTPM_Double[,1] < 10))
 
 #resubet PRC2 targets after filtering
-Prc2targetTPM <- subset(Prc2targetTPM, rownames(Prc2targetTPM)%in%rownames(AVERAGE_Prc2targetTPM))
+Prc2targetTPM_Chap <- rownames(Prc2targetTPM)%in%rownames(AVERAGE_Prc2targetTPM)
+Prc2targetTPM_Double <- subset(Prc2targetTPM, rownames(Prc2targetTPM)%in%rownames(AVERAGE_Prc2targetTPM_Double))
 
 #Add sudocount and log transform (if necessary)
 AVERAGE_Prc2targetTPM <- AVERAGE_Prc2targetTPM + 1
 AVERAGE_Prc2targetTPM <- log2(AVERAGE_Prc2targetTPM)
+#
+AVERAGE_Prc2targetTPM_Double <- AVERAGE_Prc2targetTPM_Double + 1
+AVERAGE_Prc2targetTPM_Double <- log2(AVERAGE_Prc2targetTPM_Double)
+
 
 #melt data to get it into a format ggplot can use (library "reshape2")
 meltedAveragePRC2targetData <- melt(AVERAGE_Prc2targetTPM, value.name = 'Count',
                              varnames=c('GeneID', 'Sample'))
+
+meltedAverageDoublePRC2targetData <- melt(AVERAGE_Prc2targetTPM_Double, value.name = 'Count',
+                             varnames=c('GeneID', 'Sample'))
+
 ```
 
 ```{r statistics, echo=FALSE}
@@ -261,6 +272,70 @@ heatmap_plot <- heatmap[[4]]
 
 #save plot
 ggsave(filename = "./CAF-1_K27_Heatmap_Paper_Final.pdf", plot = heatmap_plot, dpi=600, height=4, width=3)
+```
+
+```{r Plotting data in Violin Plot for Double Mutants, echo=FALSE}
+# Define factor order and formatted x-axis labels
+label_order <- c("WT", "cac-1", "cac-2", "cac-1_cac-2", "suz-12", "cac-1_suz-12")
+formatted_labels <- c(
+  "WT",
+  expression(italic("\u0394cac-1")),
+  expression(italic("\u0394cac-2")),
+  expression(italic("\u0394cac-1_cac-2")),
+  expression(italic("\u0394suz-12")),
+  expression(italic("\u0394cac-1_suz-12"))
+)
+
+#Group and summarize
+total2 <- meltedAverageDoublePRC2targetData %>%
+  group_by(Sample)
+
+total_dist <- meltedAverageDoublePRC2targetData %>%
+  group_by(Sample) %>%
+  summarise(num = n())
+
+#Set dodge for violin spacing
+dodge <- position_dodge(width = 1)
+
+#Build plot
+violin <- total2 %>%
+  left_join(total_dist) %>%
+  arrange(factor(Sample, levels = label_order)) %>%
+  mutate(Sample = factor(Sample, levels = label_order)) %>%
+  ggplot(aes(x = Sample, y = Count)) +
+  geom_violin(position = dodge, scale = "width", trim = FALSE) +
+  stat_summary(fun = "mean", geom = "crossbar", width = 0.25, colour = "red") +
+  scale_x_discrete(labels = formatted_labels) +
+  labs(
+    x = "Strain",
+    y = expression("Expression Level (log"[2]~"(TPM+1))")) +
+  theme_classic(base_size = 20) +
+  theme(
+    axis.text.x = element_text(color = "black"),
+    axis.text.y = element_text(color = "black"),
+    axis.title.x = element_text(color = "black"),
+    axis.title.y = element_text(color = "black")
+  )
+
+#check it
+print(violin)
+
+#save plot
+ggsave("./CAF-1_Double_Mutant_K27_Violin_Paper_Final.pdf", plot=violin, width = 10, height = 8, unit="in",  dpi=400)
+```
+
+```{r Plotting data on heatmap for Double Mutants, echo=FALSE}
+##Keep Only Genes that are expressed in at least one sample (n = 501)
+GenesWithChanges <- subset(AVERAGE_Prc2targetTPM_Double, (rowSums(AVERAGE_Prc2targetTPM_Double) > 0))
+
+#plot in the desired column order; did this by subsetting the dataset based on sample list 'altorder' above
+heatmap <- pheatmap(GenesWithChanges, color = colorRampPalette(rev(brewer.pal(n = 9, name ="RdBu")))(100), cellwidth = NA, cellheight = NA, scale = "row", cluster_rows = T, cluster_cols = F, clustering_method="centroid", clustering_distance_cols="euclidean", legend=T, show_rownames=F, show_colnames=T, fontsize_col=10, treeheight_row=0, treeheight_col=5, height = 1.5, width = 2.5, fontsize = 8)
+
+#plot
+heatmap_plot <- heatmap[[4]]
+
+#save plot
+ggsave(filename = "./CAF-1_Double_Mutant_K27_Heatmap_Paper_Final.pdf", plot = heatmap_plot, dpi=600, height=4, width=3)
 ```
 
 #Moving on to DESeq2
@@ -830,9 +905,9 @@ ggsave(filename = "cac1-2_set7_euler_All_UP.pdf", plot = cac1_2_set7_eulerplot, 
 library(dplyr)
 
 # Stack then keep the first occurrence of each Attributes
-cacUPcombine <- bind_rows(
-  mutate(cac1UP, .source = "cac1UP"),
-  mutate(cac2UP, .source = "cac2UP")
+cac1_suz12_K27UPcombine <- bind_rows(
+  mutate(cac1_RNA_K27, .source = "cac1_RNA_K27"),
+  mutate(suz12_RNA_K27, .source = "suz12_RNA_K27")
 ) %>%
   # if you want cac1UP to win on collisions, keep this order
   distinct(Attributes, .keep_all = TRUE) %>%
@@ -855,18 +930,43 @@ CAF1_up_K27K36_fit = euler(c("A" = 126, "B" = 39, "C" = 10, "A&B" = 98, "A&C" = 
 CAF1_up_K27K36_eulerplot <- plot(CAF1_up_K27K36_fit)
 
 set7_RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/set7__alpha0.05__K27_UP_genes.csv")
+suz12_RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/suz12__alpha0.05__K27_UP_genes.csv")
 ash1_RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/ash1__alpha0.05__K27_UP_genes.csv")
 cac1_RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac1__alpha0.05__K27_UP_genes.csv")
+cac1_cac2RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac1_cac2__alpha0.05__K27_UP_genes.csv")
+cac1_suz12RNA_K27 = read.csv("../CAF-1_RNA-seq_Analysis/csv_files/cac1_suz12__alpha0.05__K27_UP_genes.csv")
 
+##################################
+#FIGURE 2
+#Patterns of genes that lose H3K27me3 in CAF-1 mutants
 venn.diagram(
-  x = list(ash1_RNA_K27$Attributes, K36lost$gene_id),
-  category.names = c("ash1_up", "K36 lost"),
-  filename = 'ASH1UP_K36lostCAF.png',
+  x = list(K27lost$gene_id, cacupcombinek27$Attributes),
+  category.names = c("K27_lost", "K27lost_CAF_UP"),
+  filename = "K27lost_CAF-1_UP.png",
   col=c("#8da0cb","#fc8d62"),
   fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
   output=TRUE)
 
+CAF1_K27_lost_UP_fit = euler(c("A" = 53, "B" = 145, "A&B" = 147))
+CAF1_K27_lost_UP_eulerplot <- plot(CAF1_K27_lost_UP_fit)
+ggsave(filename = "CAF1_K27_lost_UP.pdf", plot = CAF1_K27_lost_UP_eulerplot, width = 4, height = 4, dpi = 600)
+
+venn.diagram(
+  x = list(K27lost_set7UP$gene_id, K27lost_cac1cac2UP$gene_id),
+  category.names = c("K27lost_set7_UP", "K27lost_CAF_UP"),
+  filename = "K27lost_set7UP_CAF1UP.png",
+  col=c("#8da0cb","#fc8d62"),
+  fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
+  output=TRUE)
+
+CAF1_K27_lost_set7_UP_fit = euler(c("A" = 13, "B" = 48, "A&B" = 99))
+CAF1_K27_lost_set7_UP_eulerplot <- plot(CAF1_K27_lost_set7_UP_fit)
+ggsave(filename = "CAF1_K27_lost_set7_UP.pdf", plot = CAF1_K27_lost_set7_UP_eulerplot, width = 4, height = 4, dpi = 600)
+##################################
+
+
 ###################################################
+#FIGURE 3
 #K27 lost ash1 K27/K36 lost caf1
 venn.diagram(
   x = list(K27lostash1$gene_id, CAF_K27_K36_Lost$gene_id),
@@ -892,8 +992,61 @@ venn.diagram(
 CAF1_ASH1_K27_UP_fit = euler(c("A" = 148, "B" = 36, "A&B" = 256))
 CAF1_ASH1_K27_UP_eulerplot <- plot(CAF1_ASH1_K27_UP_fit)
 ggsave(filename = "CAF-1_UP_ASH1_UP.pdf", plot = CAF1_ASH1_K27_UP_eulerplot <- plot(CAF1_ASH1_K27_UP_fit), width = 4, height = 4, dpi = 600)
+
+#K27 genes upregulated CAF1 K36 lost
+venn.diagram(
+  x = list(K36lost$gene_id, cacupcombinek27$Attributes),
+  category.names = c("K36lost", "CAF UP"),
+  filename = 'K36lost_CAF_UP_genes.png',
+  col=c("#8da0cb","#fc8d62"),
+  fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
+  output=TRUE)
+
+K36lost_CAF_UP_fit = euler(c("A" = 148, "B" = 36, "A&B" = 256))
+K36lost_CAF_UP_eulerplot <- plot(K36lost_CAF_UP_fit)
+ggsave(filename = "K36lost_CAF_UP.pdf", plot = K36lost_CAF_UP_eulerplot, width = 4, height = 4, dpi = 600)
+
+#K36 lost genes CAF-1 & set-7
+venn.diagram(
+  x = list(K36lost$gene_id, K36lost_set7$gene_id),
+  category.names = c("CAF-1 K36 lost", "set-7 K36 lost"),
+  filename = "CAF1_SET7_K36lost.png",
+  col=c("#8da0cb","#fc8d62"),
+  fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
+  output=TRUE)
+
+CAF1_SET7_K36lost_fit = euler(c("A" = 79, "B" = 28, "A&B" = 13))
+CAF1_SET7_K36lost_eulerplot <- plot(CAF1_SET7_K36lost_fit)
+ggsave(filename = "CAF1_SET7_K36lost.pdf", plot = CAF1_SET7_K36lost_eulerplot, width = 4, height = 4, dpi = 600)
+
 ####################################################
 
+###Double Mutants
+venn.diagram(
+  x = list(cac1_cac2RNA_K27$Attributes, cacupcombinek27$Attributes),
+  category.names = c("dub UP", "CAF UP"),
+  filename = 'CAF1_cac1_2_K27_UP_genes.png',
+  col=c("#8da0cb","#fc8d62"),
+  fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
+  output=TRUE)
+
+CAF1_Double_K27_UP_fit = euler(c("A" = 182, "B" = 8, "A&B" = 284))
+CAF1_Double_K27_UP_eulerplot <- plot(CAF1_Double_K27_UP_fit)
+ggsave(filename = "CAF-1_Double_UP.pdf", plot = CAF1_Double_K27_UP_eulerplot, width = 4, height = 4, dpi = 600)
+
+venn.diagram(
+  x = list(cac1_suz12_K27UPcombine$Attributes, cac1_suz12RNA_K27$Attributes),
+  category.names = c("singles up", "double up"),
+  filename = 'cac1suz12_singles_double_mutant_K27_UP_genes.png',
+  col=c("#8da0cb","#fc8d62"),
+  fill = c(alpha("#8da0cb",0.25), alpha("#fc8d62",0.25)),
+  output=TRUE)
+
+CAF1_suz12_Double_K27_UP_fit = euler(c("A" = 146, "B" = 5, "A&B" = 354))
+CAF1_suz12_Double_K27_UP_eulerplot <- plot(CAF1_suz12_Double_K27_UP_fit)
+ggsave(filename = "CAF-1_suz12_Double_UP.pdf", plot = CAF1_suz12_Double_K27_UP_eulerplot, width = 4, height = 4, dpi = 600)
+
+###Tests
 venn.diagram(
   x = list(ash1_RNA_K27$Attributes, set7_RNA_K27$Attributes, K27lost$gene_id),
   category.names = c("ash1_up", "set7_up", "K27 lost"),
